--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="row">
         <form action="https://formspree.io/f/mgebdoel" method="POST">
             <div class="row">
-                <div class="col span_1_of_2">
+                <div class="col span_1_of_2 ">
                     <input type="text" name="Name" placeholder="Your Name *" required>
                 </div>
                 <div class="col span_1_of_2">
@@ -32,13 +32,13 @@
                     <input type="tel" name="Phone" placeholder="Your Phone Number *" >
                 </div>
                 <div class="col span_1_of_2">
-                   <input type="text" name="Class" placeholder="Class No * "required> 
+                   <input type="text" name="Class" placeholder="Class No * "> 
                 </div>
 
             </div>
             <div class="row">
                 <div class="col span_2_of_2">
-                    <input type="file" name="Attachment" placeholder="Your Name *" required>
+                    <input type="file" name="Attachment" placeholder="Your Name *" >
                 </div>
             </div>
                 
