--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="row">
         <form action="https://formspree.io/f/mgebdoel" method="POST">
-            <div class="row">
+            <div class="row input-one">
                 <div class="col span_1_of_2 ">
                     <input type="text" name="Name" placeholder="Your Name *" required>
                 </div>
@@ -29,7 +29,7 @@
                 </div>
 
             </div>
-            <div class="row">
+            <div class="row input-one">
                 <div class="col span_1_of_2">
                     <input type="tel" name="Phone" placeholder="Your Phone Number *" >
                 </div>
