--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LDC Help Desk</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-     <link rel="stylesheet" href="/css/grid.css">
+     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
    
 
