--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <section class="contact container" id="contact">
     <div class="row ">
         <h2>tell us your problem</h2>
-        <p class="little-description">legend developer committee</p>
+        <p class="little-description">legend developer community</p>
     </div>
     <div class="row">
         <form action="https://formspree.io/f/mgebdoel" method="POST">
@@ -41,11 +41,11 @@
                 </div>
 
             </div>
-            <div class="row">
+           <!-- <div class="row">
                 <div class="col span_2_of_2">
                     <input type="file" name="Attachment" placeholder="Your Name *" >
                 </div>
-            </div>
+            </div> -->
                 
             <div class="row span_2_of_2">
                 <textarea name="Massage" id="" cols="25" rows="8" placeholder="Your Massage *"></textarea>
